# cuda_notes

./: CMakeLists.txt  README.md
include/: common_func.h
src/: device_prop.cu  gemm.cu  gemm_corner_turning.cu  main.cc  matrix_vector_mul.cu  matrixmul.cu
src/ch7/: convolution_2D_basic.cu
